tools/fleet/fixtures/packets/invalid/contradictory-final-status.case
source=valid-worker-final.packet
mutation=set Final-Status to STOP while body remains ACCEPTED
expected=invalid
